add other trace functionality

--- a/src/popup.html
+++ b/src/popup.html
@@ -16,8 +16,11 @@
 </div>
 
 <div class="control-section">
-  <button id="export">export data</button>
+  <button id="export">export parent-child tab data</button>
+  <button id="export-per-tab">export per-tab data</button>
+  <button id="export-session">export session data</button>
 </div>
+
 
 <script src="popup.js"></script>
 </body>
